# reddownload

./: .gitignore  Cargo.toml  README.md
.github/workflows/: build.yml  release.yml
src/: main.rs  reddit.rs  utils.rs
