[package]
name = "reddownload"
version = "0.2.4"
edition = "2021"
license = "MIT"
authors = ["Neil Bryson Cargamento <neilbrysonmc@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.57"
clap = { version = "3.1.18", features = ["derive"] }
reqwest = { version = "0.11.10", features = ["json"] }
serde = { version = "1.0.137", features = ["derive"] }
tempfile = "3.3.0"
tokio = { version = "1.18.2", features = ["full"] }

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
panic = "abort"
strip = true
